Implement skill type and archetype tabs in the skills panel, enhancing skill filtering and organization. Introduce a confirmation dialog for skill upgrades and resets, improving user interaction. Update CSS for new tab styles and confirmation dialog layout, ensuring a cohesive visual experience.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
                 <!-- Skills (Meta growth) -->
                 <section class="panel-view" data-view="skills">
                     <div class="panel-section-title">技能成长</div>
+                    <div class="panel-tabs" id="panel-skill-type-tabs" aria-label="技能类型"></div>
+                    <div class="panel-tabs" id="panel-skill-arch-tabs" aria-label="技能分系"></div>
                     <div class="panel-subbar">
                         <div class="panel-pill">
                             <span class="panel-pill-icon">💠</span>
