Refactor player information display by removing in-game stats panel and consolidating player attributes into the main stats panel. Introduce a new button for landscape orientation confirmation and update CSS for improved button styling. Enhance landscape orientation handling with a manual bypass feature for mobile devices.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="rotate-title">请横屏游玩</div>
             <div class="rotate-desc">本游戏为横屏手游体验。将手机旋转为横屏后自动继续。</div>
             <button id="rotate-try-btn" class="rotate-btn">点击尝试锁定横屏</button>
+            <button id="rotate-continue-btn" class="rotate-btn secondary">我已横屏，继续</button>
             <div class="rotate-hint">若浏览器不支持强制锁定，请手动旋转屏幕。</div>
         </div>
     </div>
@@ -352,7 +353,6 @@
                 </div>
                 <div id="controls-top">
                     <button id="pause-btn" class="icon-btn">⏸</button>
-                    <button id="stats-btn" class="icon-btn">📊</button>
                     <button id="sound-btn" class="icon-btn" title="音效">🔊</button>
                 </div>
             </div>
@@ -387,10 +387,10 @@
             </div>
         </div>
 
-        <!-- Pause / Stats Modal -->
+        <!-- Pause / Personal Info Modal -->
         <div id="pause-modal" class="modal hidden">
             <div class="modal-content">
-                <h2>暂停</h2>
+                <h2>暂停 · 个人信息</h2>
                 <div id="full-stats-panel">
                     <!-- Stats injected here -->
                 </div>
