Refactor boss and loot previews in game UI to improve visibility and organization. Introduce new sections for boss and reward previews, updating HTML structure accordingly. Enhance CSS for better layout and styling of preview elements, ensuring a cohesive user experience.

--- a/index.html
+++ b/index.html
@@ -206,11 +206,20 @@
                                 <div class="stage-enemies-title">本关怪物</div>
                                 <div id="stage-enemy-preview"></div>
 
-                                <div class="stage-boss-title">本关 Boss（固定）</div>
-                                <div id="stage-boss-preview"></div>
+                                <div class="stage-boss-section" id="stage-boss-section">
+                                    <div class="stage-boss-title">本关 Boss（固定）</div>
+                                    <div id="stage-boss-preview"></div>
+                                </div>
 
-                                <div class="stage-loot-title">Boss 掉落</div>
-                                <div id="stage-loot-preview"></div>
+                                <div class="stage-loot-section" id="stage-loot-section">
+                                    <div class="stage-loot-title">Boss 掉落</div>
+                                    <div id="stage-loot-preview"></div>
+                                </div>
+
+                                <div class="stage-reward-section" id="stage-reward-section">
+                                    <div class="stage-reward-title">通关奖励</div>
+                                    <div id="stage-reward-preview"></div>
+                                </div>
 
                                 <div class="stage-difficulty-title">难度</div>
                                 <div class="difficulty-row" id="difficulty-row">
